fix: style overflow highlights

--- a/src/components/Highlights/Highlights.css
+++ b/src/components/Highlights/Highlights.css
@@ -4,6 +4,7 @@
     display: flex;
     gap: 20px;
     overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .destaques-text {
